--- a/Upload.html
+++ b/Upload.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scapiz</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="icon" href="assets/logo-1.png" type="image/png">
     <link rel="stylesheet" href="./Upload.css">
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700&display=swap" rel="stylesheet">
