--- a/Home.html
+++ b/Home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scapiz</title>
+    <link rel="icon" href="assets/logo-1.png" type="image/png">
     <link rel="stylesheet" href="./styles.css">
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700&display=swap" rel="stylesheet">
