--- a/Home.html
+++ b/Home.html
@@ -137,7 +137,7 @@
 
     <div class="research-container">
       <div class="research-item">
-        <embed src="upload/ICT/SAMOSINO_RESLIFE1-ACTIVITY5.pdf" width="100%" height="375">
+        <iframe src="upload/ICT/SAMOSINO_RESLIFE1-ACTIVITY5.pdf" width="100%" height="375"></iframe>
         <div class="download-container">
           <a href="upload/ICT/SAMOSINO_RESLIFE1-ACTIVITY5.pdf" download class="download-btn">Download PDF</a>
         </div>
@@ -147,7 +147,7 @@
       </div>
     
       <div class="research-item">
-        <embed src="upload/ICT/PORTILLO_RESLIFE1-ACTIVITY5.pdf" width="100%" height="375">
+        <iframe src="upload/ICT/PORTILLO_RESLIFE1-ACTIVITY5.pdf" width="100%" height="375"></iframe>
         <div class="download-container">
           <a href="upload/ICT/PORTILLO_RESLIFE1-ACTIVITY5.pdf" download class="download-btn">Download PDF</a>
         </div>
