--- a/Home.html
+++ b/Home.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scapiz</title>
     <link rel="icon" href="assets/logo-1.png" type="image/png">
+    <title>Scapiz</title>
     <link rel="stylesheet" href="./styles.css">
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
+    <script src="preview.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700&display=swap" rel="stylesheet">
   </head>
   <body>
@@ -137,7 +138,7 @@
 
     <div class="research-container">
       <div class="research-item">
-        <iframe src="upload/ICT/SAMOSINO_RESLIFE1-ACTIVITY5.pdf" width="100%" height="375"></iframe>
+        <div id="pdfContainer1" style="width: 100%; height: 375px;"></div>
         <div class="download-container">
           <a href="upload/ICT/SAMOSINO_RESLIFE1-ACTIVITY5.pdf" download class="download-btn">Download PDF</a>
         </div>
@@ -145,9 +146,9 @@
         <span>Section: 11-Banatao (ICT)<BR></span>
         <span>Date: April 1, 2023</span>
       </div>
-    
+      
       <div class="research-item">
-        <iframe src="upload/ICT/PORTILLO_RESLIFE1-ACTIVITY5.pdf" width="100%" height="375"></iframe>
+        <div id="pdfContainer2" style="width: 100%; height: 375px;"></div>
         <div class="download-container">
           <a href="upload/ICT/PORTILLO_RESLIFE1-ACTIVITY5.pdf" download class="download-btn">Download PDF</a>
         </div>
