--- a/Home.html
+++ b/Home.html
@@ -138,7 +138,7 @@
 
     <div class="research-container">
       <div class="research-item">
-        <div id="pdfContainer1" style="width: 100%; height: 375px;"></div>
+        <div id="pdfContainer1" class="pdf-container"></div>
         <div class="download-container">
           <a href="upload/ICT/SAMOSINO_RESLIFE1-ACTIVITY5.pdf" download class="download-btn">Download PDF</a>
         </div>
@@ -148,7 +148,7 @@
       </div>
       
       <div class="research-item">
-        <div id="pdfContainer2" style="width: 100%; height: 375px;"></div>
+        <div id="pdfContainer2" class="pdf-container"></div>
         <div class="download-container">
           <a href="upload/ICT/PORTILLO_RESLIFE1-ACTIVITY5.pdf" download class="download-btn">Download PDF</a>
         </div>
@@ -156,7 +156,7 @@
         <span>Section: 11-Banatao (ICT)<BR></span>
         <span>Date: April 5, 2023</span>
       </div>
-    </div>
+    </div>    
     
   <footer>
     <div class="footer-wrapper">
