--- a/Home.html
+++ b/Home.html
@@ -154,9 +154,10 @@
       </div>
 
     <dialog id="modal">
-      <h2>Welcome to Our Newsletter</h2>
-      <p>Stay up to date with the latest news and updates by subscribing to our newsletter.</p>
-      <p>We respect your privacy. Your information will not be shared with third parties.</p>
+      <h2>Warning: Avoid Plagiarism!</h2>
+      <p>Copying or plagiarizing works uploaded in Scapiz is strictly prohibited.</p>
+      <p>Make sure to cite your sources properly and submit original content.</p>
+      <p>©2024 Scapiz, Inc. All rights reserved.</p>
       <div>
         <button class="modal-btn" data-close>Agree</button>
         <button class="modal-btn" data-close>Close</button>
