--- a/Home.html
+++ b/Home.html
@@ -6,218 +6,217 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="assets/logo-1.png" type="image/png">
   <title>Scapiz</title>
-  <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="./home.css">
   <link rel="stylesheet" href="./navbar.css">
+  <link rel="stylesheet" href="./footer.css">
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <script src="./script.js" defer></script>
 </head>
-
 <nav class="navbar">
   <div class="logo">
-      <a href="#">
-          <img src="assets/logo-1.png" alt="Logo">
-      </a>
+    <a href="#">
+      <img src="assets/logo-1.png" alt="Logo">
+    </a>
+  </div>
+  <div class="menu">
+    <div class="menu-links">
+      <a href="./Home.html">Home</a>
+      <a href="./researches.html">Researches</a>
+      <a href="./About.html">About</a>
+      <a href="#">Contact</a>
     </div>
-    <div class="menu">
-        <div class="menu-links">
-            <a href="./Home.html">Home</a>
-            <a href="./About.html">About</a>
-            <a href="#">Contact</a>
-            <a href="#">Blog</a>
-        </div>
-        <button class="log-in">Log In</button>
-    </div>
-    <div class="menu-btn">
-        <i class="fa-solid fa-bars"></i>
-    </div>
+    <button class="log-in">Log In</button>
+  </div>
+  <div class="menu-btn">
+    <i class="fa-solid fa-bars"></i>
+  </div>
 </nav>
 
 <div class="mobile-menu">
-    <div class="menu-links">
-        <a href="./Home.html">Home</a>
-        <a href="./About.html">About</a>
-        <a href="#">Contact</a>
-        <a href="#">Researches</a>
-    </div>
-    <button class="log-in">Log In</button>
+  <div class="menu-links">
+    <a href="./Home.html">Home</a>
+    <a href="./researches.html">Researches</a>
+    <a href="./About.html">About</a>
+    <a href="#">Contact</a>
+  </div>
+  <button class="log-in">Log In</button>
 </div>
 
-  <div class="mobile-menu">
-    <div class="menu-links">
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-      <a href="#">Researches</a>
-    </div>
-    <button class="log-in">Log In</button>
+<div class="mobile-menu">
+  <div class="menu-links">
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Contact</a>
+    <a href="#">Researches</a>
   </div>
+  <button class="log-in">Log In</button>
+</div>
 
-  <!-- Welcome Section -->
-<section id="welcome-scapiz">
+<div id="welcome-scapiz">
   <div class="container">
     <h1>Welcome to Scapiz</h1>
-    <p>Discover a world of knowledge at your fingertips with Scapiz, the premier digital library platform for Rizal Technological University - Senior High School (RTU-SHS). Dive into our extensive collection of academic research and empower your learning journey.</p>
+    <p>Discover a world of researches and creativity.</p>
+    <a href="#about-us-section" class="cta-button">Learn More</a>
   </div>
-</section>
+</div>
 
-  
-    <br><br><br><br>
-    <div class="heading">
-      <h2>Recently Uploaded Researches</h2>
-    </div>
 
-    <div class="table-container">
-      <div class="research-container">
-        <div class="research-item">
-          <iframe src="https://drive.google.com/file/d/1KFdDCgYLL1ju8m1X-vK3zvAhM_Fjl0UL/preview"
-            style="width:100%; height:375px;"></iframe>
-          <div class="download-container">
-            <a href="https://drive.google.com/uc?export=download&id=1KFdDCgYLL1ju8m1X-vK3zvAhM_Fjl0UL" download
-              class="btn" data-open>Download PDF</a>
-          </div>
-          <div class="details">
-            <div class="detail-row">
-              <div class="detail-label" style="color: #ffffff;">Author: </div>
-              <div class="detail-value">Samosino, Louis Jefferson V.</div>
-            </div>
-            <div class="detail-row">
-              <div class="detail-label" style="color: #ffffff;">Section: </div>
-              <div class="detail-value">11-Banatao (ICT)</div>
-            </div>
-            <div class="detail-row">
-              <div class="detail-label" style="color: #ffffff;">Date: </div>
-              <div class="detail-value">04/01/2023</div>
-            </div>
-          </div>
+
+<br><br><br><br>
+<div class="heading">
+  <h2>Recently Uploaded Researches</h2>
+</div>
+
+<div class="table-container">
+  <div class="research-container">
+    <div class="research-item">
+      <iframe src="https://drive.google.com/file/d/1KFdDCgYLL1ju8m1X-vK3zvAhM_Fjl0UL/preview"
+        style="width:100%; height:375px;"></iframe>
+      <div class="download-container">
+        <a href="https://drive.google.com/uc?export=download&id=1KFdDCgYLL1ju8m1X-vK3zvAhM_Fjl0UL" download class="btn"
+          data-open>Download PDF</a>
+      </div>
+      <div class="details">
+        <div class="detail-row">
+          <div class="detail-label" style="color: #ffffff;">Author: </div>
+          <div class="detail-value">Samosino, Louis Jefferson V.</div>
         </div>
-
-        <div class="research-item">
-          <iframe src="https://drive.google.com/file/d/1NE8BT1HD01dLl92XPvNiOGvMq04jTRqq/preview"
-            style="width:100%; height:375px;"></iframe>
-          <div class="download-container">
-            <a href="https://drive.google.com/uc?export=download&id=1NE8BT1HD01dLl92XPvNiOGvMq04jTRqq" download
-              class="btn" data-open>Download PDF</a>
-          </div>
-          <div class="details">
-            <div class="detail-row">
-              <div class="detail-label" style="color: #ffffff;">Author:</div>
-              <div class="detail-value">Portillo, Jade Bianca</div>
-            </div>
-            <div class="detail-row">
-              <div class="detail-label" style="color: #ffffff;">Section:</div>
-              <div class="detail-value">11-Banatao (ICT)</div>
-            </div>
-            <div class="detail-row">
-              <div class="detail-label" style="color: #ffffff;">Date:</div>
-              <div class="detail-value">04/05/2023</div>
-            </div>
-          </div>
+        <div class="detail-row">
+          <div class="detail-label" style="color: #ffffff;">Section: </div>
+          <div class="detail-value">11-Banatao (ICT)</div>
+        </div>
+        <div class="detail-row">
+          <div class="detail-label" style="color: #ffffff;">Date: </div>
+          <div class="detail-value">04/01/2023</div>
         </div>
       </div>
     </div>
 
-
-
-    <dialog id="modal">
-      <h2>Warning: Avoid Plagiarism!</h2>
-      <p>Copying or plagiarizing works uploaded in Scapiz is strictly prohibited.</p>
-      <p>Make sure to cite your sources properly and submit original content.</p>
-      <p>©2024 Scapiz, Inc. All rights reserved.</p>
-      <div>
-        <button class="modal-btn" data-close>Agree</button>
-        <button class="modal-btn" data-close>Close</button>
+    <div class="research-item">
+      <iframe src="https://drive.google.com/file/d/1NE8BT1HD01dLl92XPvNiOGvMq04jTRqq/preview"
+        style="width:100%; height:375px;"></iframe>
+      <div class="download-container">
+        <a href="https://drive.google.com/uc?export=download&id=1NE8BT1HD01dLl92XPvNiOGvMq04jTRqq" download class="btn"
+          data-open>Download PDF</a>
       </div>
-    </dialog>
+      <div class="details">
+        <div class="detail-row">
+          <div class="detail-label" style="color: #ffffff;">Author:</div>
+          <div class="detail-value">Portillo, Jade Bianca</div>
+        </div>
+        <div class="detail-row">
+          <div class="detail-label" style="color: #ffffff;">Section:</div>
+          <div class="detail-value">11-Banatao (ICT)</div>
+        </div>
+        <div class="detail-row">
+          <div class="detail-label" style="color: #ffffff;">Date:</div>
+          <div class="detail-value">04/05/2023</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 
-    <footer>
-      <script>
-        // JavaScript to handle modal open and close
-        document.addEventListener('DOMContentLoaded', function () {
-          const openButtons = document.querySelectorAll("[data-open]");
-          const closeButtons = document.querySelectorAll("[data-close]");
-          const modal = document.querySelector("#modal");
 
-          // Open the modal when any button with data-open is clicked
-          openButtons.forEach(button => {
-            button.addEventListener("click", () => {
-              modal.showModal();
-            });
-          });
+<dialog id="modal">
+  <h2>Warning: Avoid Plagiarism!</h2>
+  <p>Copying or plagiarizing works uploaded in Scapiz is strictly prohibited.</p>
+  <p>Make sure to cite your sources properly and submit original content.</p>
+  <p>©2024 Scapiz, Inc. All rights reserved.</p>
+  <div>
+    <button class="modal-btn" data-close>Agree</button>
+    <button class="modal-btn" data-close>Close</button>
+  </div>
+</dialog>
 
-          // Close the modal when any button with data-close is clicked
-          closeButtons.forEach(button => {
-            button.addEventListener("click", () => {
-              modal.close();
-            });
-          });
 
-          // Close the modal when clicking outside of it
-          modal.addEventListener("click", function (event) {
-            if (event.target === modal) {
-              modal.close();
-            }
-          });
+<footer>
+  <script>
+
+    document.addEventListener('DOMContentLoaded', function () {
+      const openButtons = document.querySelectorAll("[data-open]");
+      const closeButtons = document.querySelectorAll("[data-close]");
+      const modal = document.querySelector("#modal");
+
+
+      openButtons.forEach(button => {
+        button.addEventListener("click", () => {
+          modal.showModal();
         });
-      </script>
-      <div class="footer-wrapper">
-        <div class="footer-section">
-          <div class="footer-subscribe">
-            <h2>
-              Subscribe to the Scapiz® newsletter to stay up-to-date with the latest releases
-            </h2>
-            <div class="input-box">
-              <input type="email" placeholder="Email Address" />
-              <button>
-                <svg width="41" height="22" viewBox="0 0 41 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M40.002 11.001H0.501953M40.002 11.001L30.002 1.00098M40.002 11.001L30.002 21.001"
-                    stroke="#0E100F"></path>
-                </svg>
-              </button>
-            </div>
-          </div>
-          <nav class="footer-nav">
-            <div>
-              <h3>Company</h3>
-              <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact Us</a></li>
-              </ul>
-            </div>
-            <div>
-              <h3>Scapiz</h3>
-              <ul>
-                <li><a href="#">Pricing</a></li>
-                <li><a href="#">Showcase</a></li>
-                <li><a href="#">Resources</a></li>
-                <li><a href="#">Community</a></li>
-              </ul>
-            </div>
-            <div>
-              <h3>Connect</h3>
-              <ul>
-                <li><a href="#">Instagram</a></li>
-                <li><a href="#">GitHub</a></li>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Linkedin</a></li>
-              </ul>
-            </div>
-          </nav>
-        </div>
-        <!--euning my loves-->
-        <div class="footer-copyright">
-          <p>©2024 Scapiz, Inc. All rights reserved.</p>
-          <p>Privacy Policy.</p>
-          <p>Terms of Use.</p>
+      });
+
+
+      closeButtons.forEach(button => {
+        button.addEventListener("click", () => {
+          modal.close();
+        });
+      });
+
+
+      modal.addEventListener("click", function (event) {
+        if (event.target === modal) {
+          modal.close();
+        }
+      });
+    });
+  </script>
+  <div class="footer-wrapper">
+    <div class="footer-section">
+      <div class="footer-subscribe">
+        <h2>
+          Subscribe to the Scapiz® newsletter to stay up-to-date with the latest releases
+        </h2>
+        <div class="input-box">
+          <input type="email" placeholder="Email Address" />
+          <button>
+            <svg width="41" height="22" viewBox="0 0 41 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M40.002 11.001H0.501953M40.002 11.001L30.002 1.00098M40.002 11.001L30.002 21.001"
+                stroke="#0E100F"></path>
+            </svg>
+          </button>
         </div>
       </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/boosted@5.3.3/dist/js/boosted.bundle.min.js"
-      integrity="sha384-3RoJImQ+Yz4jAyP6xW29kJhqJOE3rdjuu9wkNycjCuDnGAtC/crm79mLcwj1w2o/"
-      crossorigin="anonymous"></script>
-  </body>
+      <nav class="footer-nav">
+        <div>
+          <h3>Company</h3>
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </div>
+        <div>
+          <h3>Scapiz</h3>
+          <ul>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Showcase</a></li>
+            <li><a href="#">Resources</a></li>
+            <li><a href="#">Community</a></li>
+          </ul>
+        </div>
+        <div>
+          <h3>Connect</h3>
+          <ul>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">GitHub</a></li>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Linkedin</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+    <!--euning my loves-->
+    <div class="footer-copyright">
+      <p>©2024 Scapiz, Inc. All rights reserved.</p>
+      <p>Privacy Policy.</p>
+      <p>Terms of Use.</p>
+    </div>
+  </div>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/boosted@5.3.3/dist/js/boosted.bundle.min.js"
+  integrity="sha384-3RoJImQ+Yz4jAyP6xW29kJhqJOE3rdjuu9wkNycjCuDnGAtC/crm79mLcwj1w2o/" crossorigin="anonymous"></script>
+</body>
 
-  </html>
+</html>
